--- a/sample/src/main/res/layout/main.xml
+++ b/sample/src/main/res/layout/main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <nurisezgin.com.mine.sample.SampleView
+    <com.sample.SampleView
         android:id="@+id/sample_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,7 +19,7 @@
         app:intval="one"
         app:stringval="@string/app_name"/>
 
-    <nurisezgin.com.mine.sample.SampleView
+    <com.sample.SampleView
         android:id="@+id/opt_sample_view"
         android:layout_width="100dp"
         android:layout_height="100dp"
